--- a/3listaDeExercicios/index.html
+++ b/3listaDeExercicios/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Exercício 1</title>
 </head>
 <body>
@@ -13,11 +14,11 @@
 
     <main>
         <section>
-            <h2>Missão</h2>
+            <h2 class="subtitulo">Missão</h2>
             <p>Nossa missão é entregar os exercícios na data</p>
         </section>
         <section>
-            <h2>Visão</h2>
+            <h2 class="subtitulo">Visão</h2>
             <p>Ter uma visão ampla de tudo que estamos estudando</p>
         </section>
     </main>
