--- a/3listaDeExercicios/index.html
+++ b/3listaDeExercicios/index.html
@@ -14,12 +14,12 @@
 
     <main>
         <section>
-            <h2 class="subtitulo">Missão</h2>
-            <p>Nossa missão é entregar os exercícios na data</p>
+            <h2>Missão</h2>
+            <p id="importante">Nossa missão é entregar os exercícios na data</p>
         </section>
         <section>
-            <h2 class="subtitulo">Visão</h2>
-            <p>Ter uma visão ampla de tudo que estamos estudando</p>
+            <h2>Visão</h2>
+            <p class="destaque">Ter uma visão ampla de tudo que estamos estudando</p>
         </section>
     </main>
 
